# transcribe-app

./: .env.example  .gitignore  Dockerfile  LICENSE  Make.ps1  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  task.md
app/: config.py  main.py  phrase_list.py
app/services/: __init__.py  audio_converter.py  azure_speech_service.py  export_service.py  speech_service.py
app/static/: index.html
tests/: __init__.py  test_api.py  test_audio_converter.py
